test/e2e/features/rate_limit/global/testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-0
spec:
  selector:
    app: backend-0
    version: v1
  ports:
  - port: 8080
    name: http
    targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-0
      version: v1
  template:
    metadata:
      labels:
        app: backend-0
        version: v1
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:1.0.0
        args:
          - "-text=Hello from backend service"
        ports:
        - containerPort: 5678
          name: http
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
